--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<html>
+<body>
 <h1>Colab Discover</h1>
-<p>Allows you to create a playlist comprised of songs from you and your friends 🐳</p>
+<p>Allows you to create a playlist comprised of songs from you and your friends.</p>
+<hr>
 <router-outlet></router-outlet>
+</body>
+</html>
