fix: commit all files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <html>
-<body>
+<header>
 <h1>Colab Discover</h1>
-<p>Allows you to create a playlist comprised of songs from you and your friends.</p>
+<p>discover music together</p>
 <hr>
+</header>
+<body>
 <router-outlet></router-outlet>
 </body>
 </html>
