copy: unattractive full stop.

--- a/src/app/share-playlist/share-playlist.component.html
+++ b/src/app/share-playlist/share-playlist.component.html
@@ -1,4 +1,4 @@
-<p>You've been invited to join a collaborative discover playlist.</p>
+<p>You've been invited to join a collaborative discover playlist</p>
 <p>Join now and we will:</p>
 <ul>
     <li>grab a couple of tracks from your recent Spotify top played
