--- a/src/app/share-playlist/share-playlist.component.scss
+++ b/src/app/share-playlist/share-playlist.component.scss
@@ -1,4 +1,3 @@
-
 li {
   list-style-type: none;
   position: relative;
@@ -9,9 +8,14 @@ li::before {
   position: absolute;
   left: -1.4em;
   top: -0.1em;
-  font-size: 1.1em;      /* Adjust this value so that it appears what size you want. */
+  font-size: 1.1em;
 }
 
+/*
+ * I'm not a designy guy, so I stole this button from this codepen:
+ * https://codepen.io/bloom-dan/pen/dpbWRz
+ * throw bloon-dan some love if you like it.
+ */
 button {
   overflow: visible;
   border: 0;
