feat: add github link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,7 @@
 <body>
 <router-outlet></router-outlet>
 </body>
+<a href="https://github.com/wi11e/colabdiscover">
+<img id="github" src="../assets/github-logo.png" alt="github"/>
+</a>
 </html>
