feat: make artwork banner part of every page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <html>
-<head>
-    <title>Colab Discover</title>
-</head>
+<title>Colab Discover</title>
 <header>
-<h1>Colab Discover</h1>
-<p>discover music together</p>
-<hr>
+    <h1>Colab Discover</h1>
+    <p>discover music together</p>
+    <hr>
+    <app-artwork-banner></app-artwork-banner>
+    <hr>
 </header>
 <body>
 <router-outlet></router-outlet>
